fixed to responsive and some alignments

--- a/style.css
+++ b/style.css
@@ -9,43 +9,62 @@ body {
 }
 
 .side {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
     width: 320px;
     height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
     background-color: #FFFFFF;
     box-shadow: 1rem 0 52px rgba(14, 24, 80, 0.2),
         -2px 0 4px rgba(69, 79, 126, 0.02);
+}
 
-    position: relative;
+.side-top {
+    display: flex;
+    flex-direction: column;
+    gap: 46px;
 }
 
 .side-header {
     display: flex;
     justify-content: space-between;
+    padding-left: 24px;
+    padding-top: 18px;
     width: 100%;
-    padding-bottom: 24px;
 }
 
-.side-header__left {
-    display: flex;
-    padding: 18px 24px;
-}
-
-.side-header__left img,
 .side-header img {
     margin-right: 1rem;
 }
 
+.side-header button {
+    border: none;
+    background-color: #FFFFFF;
+}
+
+.side-header button:hover {
+    cursor: pointer;
+}
+
+.side-header__left {
+    display: flex;
+}
+
 .side-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     width: 100%;
     height: auto;
 }
-
 
 .side-menu__btn {
     width: 100%;
     height: 32px;
     padding-left: 24px;
-    margin-bottom: 1rem;
     border: none;
     text-align: left;
     font-size: 1rem;
@@ -55,37 +74,53 @@ body {
     background-color: #FFFFFF;
 }
 
-.side-menu__btn:hover {
-    cursor: pointer;
-    background-color: rgba(248, 248, 248, 1);
-    transition: all 0.3s ease;
+.side-menu__btn:focus {
+    background-color: #f0f0f0;
+    border-left: 4px solid rgba(65, 246, 215, 1);
+    /* padding-left: 20px; */
+    color: rgba(126, 126, 130, 1);
+    transition: all 0.1s ease;
 }
 
-.side-menu__btn:first-child {
-    border-left: 4px solid rgba(65, 246, 215, 1);
-    padding-left: 20px;
-    color: rgba(126, 126, 130, 1);
+.side-menu__btn:hover {
+    background-color: #f0f0f0;
 }
 
 .side-footer {
-    position: absolute;
-    left: 24px;
-    bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    margin-left: 24px;
+    padding-bottom: 2rem;
 }
 
-.side-footer__support img {
-    margin-right: 1rem;
+.side-footer__support {
+    display: flex;
+    gap: 1rem;
     margin-bottom: 1rem;
+}
+
+.side-footer__support button {
+    border: none;
+    background-color: #FFFFFF;
+}
+
+.side-footer__support button:hover {
+    cursor: pointer;
 }
 
 .side-footer__email {
     text-decoration: none;
     color: rgba(27, 28, 33, 1);
+    margin-bottom: 12px;
 }
 
 .side-footer h3 {
-    margin-top: 1rem;
     margin-bottom: 40px;
+}
+
+.side-footer__language {
+    display: flex;
+    gap: 7px;
 }
 
 .language {
@@ -95,14 +130,12 @@ body {
     border: none;
     border-radius: 6px;
     background-color: #FFFFFF;
-    margin-right: 7px;
-    /* padding: 7px; */
 }
 
 .language:hover {
     cursor: pointer;
 }
 
-.language:first-child {
+.language:focus {
     color: rgba(126, 126, 130, 1);
 }
